[workspace]
resolver = "2"
members = [
    "admin-utils",
    "bitmap",
    "borsh-utils",
    "controller",
    "core",
    "crypto",
    "defuse",
    "erc191",
    "map-utils",
    "near-utils",
    "nep245",
    "nep413",
    "nep461",
    "num-utils",
    "webauthn",
    "poa-factory",
    "poa-token",
    "serde-utils",
    "tests",
    "wnear",
]
default-members = ["defuse"]

[workspace.package]
edition = "2021"
repository = "https://github.com/defuse-protocol/defuse-contracts"

[workspace.dependencies]
defuse-admin-utils.path = "admin-utils"
defuse-bitmap.path = "bitmap"
defuse-borsh-utils.path = "borsh-utils"
defuse-controller.path = "controller"
defuse-core.path = "core"
defuse-crypto.path = "crypto"
defuse.path = "defuse"
defuse-erc191.path = "erc191"
defuse-map-utils.path = "map-utils"
defuse-near-utils.path = "near-utils"
defuse-nep245.path = "nep245"
defuse-nep413.path = "nep413"
defuse-nep461.path = "nep461"
defuse-num-utils.path = "num-utils"
defuse-webauthn.path = "webauthn"
defuse-poa-factory.path = "poa-factory"
defuse-poa-token.path = "poa-token"
defuse-serde-utils.path = "serde-utils"
defuse-wnear.path = "wnear"

anyhow = "1"
bnum = { version = "0.12", features = ["borsh"] }
chrono = { version = "0.4", default-features = false }
derive_more = "1.0"
hex = "0.4"
hex-literal = "0.4"
impl-tools = "0.10"
itertools = "0.13"
near-account-id = "1.0"
near-contract-standards = "5.5"
near-plugins = { git = "https://github.com/Near-One/near-plugins", rev = "e6e4b070" }
near-sdk = "5.7"
near-workspaces = "0.14"
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rstest = "0.21.0"
serde_json = "1"
serde_with = "3.9"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.38", default-features = false }

[workspace.lints.clippy]
all = "deny"
module_name_repetitions = { level = "allow", priority = -1 }
missing_errors_doc = { level = "allow", priority = -1 }
missing_panics_doc = { level = "allow", priority = -1 }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
strip = "symbols"
panic = "abort"
overflow-checks = true
