[package]
name = "defuse-account-contract-impl"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-account-contract.workspace = true

near-sdk.workspace = true
strum.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
