[package]
name = "defuse-account-contract"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-contracts = { workspace = true, features = ["account"] }

near-sdk.workspace = true
near-contract-standards.workspace = true
thiserror.workspace = true

[features]
abi = ["defuse-contracts/abi"]

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
