[package]
name = "defuse-contracts"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
bs58.workspace = true
hex.workspace = true
impl-tools.workspace = true
lazy_static.workspace = true
near-account-id.workspace = true
near-sdk.workspace = true
near-contract-standards.workspace = true
serde_with = { workspace = true, features = ["base64"] }
strum.workspace = true
thiserror.workspace = true

[features]
default = ["account", "controller", "defuse", "intents", "mpc"]

account = []
controller = []
crypto = []
defuse = ["nep413"]
intents = []
mpc = []
nep413 = ["crypto"]

# HACK: Semi-feature to enable `#[derive(JsonSchema)]` only when
# `not(target_arch = "wasm32"))`. This is needed to make
# `cargo near abi` work as it doesn't allow to pass `--features abi`.
abi = ["serde_with/schemars_0_8"]
