[package]
name = "defuse-controller-contract"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

[dependencies]
# defuse-account-contract.workspace = true

near-sdk.workspace = true
near-plugins.workspace = true
