[package]
name = "defuse-crypto"
edition.workspace = true
version = "0.1.0"

[dependencies]
hex.workspace = true
near-sdk = { workspace = true, features = ["unstable"] }
near-account-id.workspace = true
serde_with = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true

[features]
abi = ["serde", "serde_with/schemars_0_8"]
serde = ["dep:serde_with"]
