[package]
name = "defuse-crypto"
edition.workspace = true
version = "0.1.0"

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
near-sdk = { workspace = true, features = ["unstable"] }
p256.workspace = true
serde_with = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true

[features]
abi = ["serde", "serde_with/schemars_0_8"]
serde = ["dep:serde_with"]
