[package]
name = "defuse-contract"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-contracts = { workspace = true, features = ["defuse"] }

impl-tools.workspace = true
near-account-id.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true

[features]
abi = ["defuse-contracts/abi"]
