[package]
name = "defuse-poa-token"
edition.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-admin-utils.workspace = true
defuse-near-utils.workspace = true

near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk = { workspace = true, features = ["unstable"] }

[features]
contract = []
