[package]
name = "defuse-serde-utils"
edition.workspace = true
version = "0.1.0"

[dependencies]
derive_more = { workspace = true, features = ["from"] }
near-sdk.workspace = true
serde_with.workspace = true

[features]
default = ["base58", "base64"]

abi = []
base58 = []
base64 = ["serde_with/base64"]
