[package]
name = "defuse-solana-message"
edition.workspace = true
version = "0.1.0"

[dependencies]
defuse-crypto.workspace = true
defuse-serde-utils.workspace = true

impl-tools.workspace = true
near-sdk.workspace = true
serde_with.workspace = true

[features]
abi = ["defuse-serde-utils/abi", "defuse-crypto/abi"]
