[package]
name = "defuse-contracts-tests"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dev-dependencies]
defuse-contracts = { workspace = true, features = ["unit-testing"] }

anyhow.workspace = true
bnum = { workspace = true, features = ["rand"] }
impl-tools.workspace = true
near-crypto = "0.26"
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces.workspace = true
near-contract-standards.workspace = true
rand = "0.8"
rstest = "0.21.0"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
