[package]
name = "defuse-tests"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dev-dependencies]
defuse = { workspace = true, features = ["contract"] }
defuse-poa-factory = { workspace = true, features = ["contract"] }

anyhow.workspace = true
bnum = { workspace = true, features = ["rand"] }
hex-literal.workspace = true
impl-tools.workspace = true
near-crypto = "0.26"
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces.workspace = true
near-contract-standards.workspace = true
rand = "0.8"
rstest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
