[package]
name = "defuse-wasm-toolkit"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
defuse-contracts = { workspace = true, features = ["intents", "defuse"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
serde_json = "1.0"
