[package]
name = "defuse-webauthn"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["serde"] }
defuse-serde-utils.workspace = true

near-sdk.workspace = true
serde_with.workspace = true

[features]
abi = ["defuse-serde-utils/abi", "defuse-crypto/abi"]
