[package]
name = "defuse-swap-intent-contract"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-contracts = { workspace = true, features = ["intents"] }

near-contract-standards.workspace = true
near-sdk.workspace = true
